WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257200
Ignore bidi control characters while collecting fallback fonts
https://bugs.webkit.org/show_bug.cgi?id=257200
Summary
Ignore bidi control characters while collecting fallback fonts
Amanda Falke
Reported
2023-05-23 07:41:19 PDT
https://drafts.csswg.org/css-text-3/#white-space-processing
"Unsupported Default_ignorable characters must be ignored for text rendering." As mentioned in
245154@main
, taking zero width glyphs (e.g. control characters) into consideration while collecting fallback font information may result in incorrect line height and baseline positioning; an alternative mentioned in
245154@main
was to check against unicode ranges to omit certain glyphs.
246121@main
fixed a regression in which bidi control chars rendered, and replaced our previous hardcoded list of Default_ignorable characters with the helper function,FontCascade::isCharacterWhoseGlyphsShouldBeDeletedForTextRendering (also refactored in
260081@main
). That helper function covers the use case 'rightToLeftOverride' which the test `LayoutTests/fast/text/fallback-font-and-zero-width-glyph.html`, currently marked as failing in glib, relies on.
Attachments
Add attachment
proposed patch, testcase, etc.
Amanda Falke
Comment 1
2023-05-23 08:59:59 PDT
PR, WIP.
https://github.com/WebKit/WebKit/pull/14240
EWS
Comment 2
2023-05-25 01:29:59 PDT
Committed
264509@main
(07b1f5f81cef): <
https://commits.webkit.org/264509@main
> Reviewed commits have been landed. Closing PR #14240 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-25 01:30:18 PDT
<
rdar://problem/109820978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug